k8s/database_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database-deployment
  namespace: database
  labels:
    app: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
      - name: database
        image: budhaujjwal/docker-k8s:db
        ports:
        - containerPort: 3306

        volumeMounts:
            - mountPath: /var/lib/mysql
              name: database-storage

      volumes:
        - name: database-storage
          persistentVolumeClaim:
            claimName: database-pv-claim

---
apiVersion: v1
kind: Service
metadata:
  name: database-service
  namespace: database
spec:
  # type: NodePort
  type: ClusterIP
  selector:
    app: database
  ports:
    - port: 3306
      targetPort: 3306
      # nodePort: 30009
